--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettify": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "@oaktree/react-fetcher": "^1.0.9",
@@ -24,6 +25,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "prettier": "^2.8.8",
     "sass": "^1.58.3",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
