--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "tsc": "tsc",
     "watch": "tsnd --respawn src/index.ts user_service",
+    "prettify": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "mig": "node dist/index.js migration",
     "lint:fix": "eslint --fix src",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register -r dotenv/config 'src/**/*test.ts'",
