--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,14 +10,16 @@
     "prettify": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
-    "@oaktree/react-fetcher": "^1.0.9",
+    "@oaktree/react-fetcher": "^1.0.11",
     "chart.js": "^4.2.1",
+    "formik": "^2.4.2",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.3",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
